--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,10 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Log in</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="sign_out">Sign out</string>
     <string name="action_register">Register</string>
+    <string name="hint_first_name">First name</string>
+    <string name="hint_last_name">Last name</string>
     <string name="action_forgot_password">Forgot your password?</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
