--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,14 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
     <string name="title_activity_account">AccountActivity</string>
     <string name="account">Account</string>
-    <string name="first_name">First Name:</string>
-    <string name="last_name">Last Name:</string>
-    <string name="email">Email:</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email">Email</string>
+    <string name="verification">Verification</string>
+
     <string name="delete_account">Delete Account</string>
     <string name="update_details">Update details</string>
     <string name="sample_first_name">John</string>
