implement HomeActivity RecentItems widgets funtionality - working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,7 @@
 
     <string name="submit">Submit</string>
 
+    <string name="recent">Recent</string>
+    <string name="see_more">See More</string>
+
 </resources>
