implement week view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,18 @@
     <string name="year">Year</string>
 
     <string name="archive">Archive</string>
+    <string name="date_format">%1$d/%2$d/%3$d</string>
+
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="no_score">---</string>
+
+
 
 
 </resources>
